Kubernetes/Chapter-4 Cloud/3.3 To the Gateway-Pingpon app with GatewayAPI-Azure/GatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: azure-alb-external
spec:
  controllerName: alb.networking.azure.io/alb-controller
