Kubernetes/Chapter-4 Cloud/3.3 To the Gateway-Pingpon app with GatewayAPI-Azure/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agc-gateway
  namespace: default
  annotations:
    alb.networking.azure.io/alb-id: /subscriptions/94eb4090-3469-4a04-b56d-0f5af07bdf41/resourceGroups/rg1/providers/Microsoft.ServiceNetworking/trafficControllers/my-agc
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
